# ETL-tool-for-extracting-Lidar-data

./: LICENCE  README.md  cml.yml  demonstrate.py  pydal.ipynb  requirements.txt  setup.cfg  setup.py
.github/workflows/: cml.yml
package/: __init__.py  fetch_data.py
scripts/: fetch.py  fetch_template.json
src/: data.json  get_data.py
tests/: unittesting.py
usgs/: data_fetcher.py  demonstrate.ipynb  demonstration.ipynb  fetch.py  fetch_data.py  file_read.py  get_data.json  get_data.py  logger.py  logger_creator.py  pipeline_template.json
usgs/docs/: Makefile  conf.py  fetch_data.rst  file_read.rst
usgs/docs/_build/doctrees/: environment.pickle  fetch_data.doctree  file_read.doctree  index.doctree  logger.doctree  modules.doctree  scripts.doctree
usgs/docs/_build/html/: .buildinfo  fetch_data.html  file_read.html  genindex.html  index.html  logger.html  modules.html  objects.inv  scripts.html  search.html  searchindex.js
usgs/docs/_build/html/_sources/: index.rst.txt  modules.rst.txt
