[metadata]
name = AgriTech
version = 0.0.1
author = Nebiyu Samuel
author_email = neba.samuel17@gmail.com
description = Python package for getting data from Aws dataset
long_description = file: README.md
url = https://github.com/nebasam/AgriTech---USGS-LIDAR-package
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True